--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div id="start" class="start">
-        <h1>インターネット依存度テスト</h1>
+        <h1>iPad 診断テスト</h1>
         <button id="start-btn" class="btn">スタート</button>
       </div>
       <div id="quiz" class="quiz hide">
