--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div id="result" class="result hide">
         <h1>診断結果</h1>
-        <div id="score"></div>
+        <div class="score" id="score"></div>
         <p id="result-text" class="result-text"></p>
         <button id="restart-btn" class="btn">もう一度診断する</button>
       </div>
