--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div id="start" class="start">
-        <h1>iPad 診断テスト</h1>
+        <h1>ネット依存 診断テスト</h1>
         <button id="start-btn" class="btn">スタート</button>
       </div>
       <div id="quiz" class="quiz hide">
@@ -27,7 +27,7 @@
       const questions = [
         {
           question:
-            "iPadをやめられなくて、やらなければならない事を後回しにする事がある。",
+            "ゲームや動画を見るのがやめられなくて、やらなければならない事を後回しにする。",
           answers: [
             {
               text: "まったくない",
@@ -130,7 +130,8 @@
         },
 
         {
-          question: "iPadを使っていない時でも、iPadの事を考えている事がある。",
+          question:
+            "iPadを使っていない時でも、ゲームやYouTubeなどのネットコンテンツの事を考えている。",
           answers: [
             {
               text: "まったくない",
@@ -155,8 +156,7 @@
           ],
         },
         {
-          question:
-            "自分が考えているより、長い時間iPadを使ってしまうことがある。",
+          question: "自分が思ったより、長い時間iPadを使ってしまうことがある。",
           answers: [
             {
               text: "まったくない",
